--- a/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
@@ -65,8 +65,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="pages\css\bootstrap.min.css" />
     <Content Include="Data_Update_M.asmx" />
     <Content Include="Global.asax" />
+    <Content Include="pages\index.html" />
     <Content Include="Web.config" />
     <Content Include="mzbcpj.aspx" />
   </ItemGroup>
@@ -89,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="js\" />
     <Folder Include="Models\" />
     <Folder Include="View\" />
   </ItemGroup>
