--- a/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
@@ -39,6 +39,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Service\bin\Debug\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Service">
+      <HintPath>..\Service\bin\Debug\Service.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -72,6 +79,9 @@
     <Content Include="pages\fonts\Ubuntu-Medium.ttf" />
     <Content Include="pages\fonts\Ubuntu-MediumItalic.ttf" />
     <Content Include="pages\fonts\Ubuntu-Regular.ttf" />
+    <Content Include="paramParse.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -113,6 +123,7 @@
     <Content Include="pages\js\respond.min.js" />
     <Content Include="pages\js\twitter-bootstrap-hover-dropdown.js" />
     <Content Include="pages\js\twitter-bootstrap-hover-dropdown.min.js" />
+    <Content Include="pages\xnhservice.asmx" />
     <Content Include="pages\zymxsc.html" />
     <Content Include="pages\rydj.html" />
     <Content Include="Web.config" />
@@ -125,6 +136,10 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="pages\xnhservice.asmx.cs">
+      <DependentUpon>xnhservice.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="mzbcpj.aspx.cs">
