--- a/VSWork/plxnhApi/ApiMonitor/Web.config
+++ b/VSWork/plxnhApi/ApiMonitor/Web.config
@@ -8,4 +8,18 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="Data_Update_MSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:38894/Data_Update_M.asmx"
+          binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap"
+          contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />
+    </client>
+  </system.serviceModel>
+  
 </configuration>
