--- a/VSWork/plxnhApi/testConsole/App.config
+++ b/VSWork/plxnhApi/testConsole/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="Data_Update_MSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:38894/Data_Update_M.asmx"
+          binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap"
+          contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
