--- a/VSWork/plxnhApi/Service/app.config
+++ b/VSWork/plxnhApi/Service/app.config
@@ -12,4 +12,8 @@
                 contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />
         </client>
     </system.serviceModel>
+  
+  <appSettings>
+    <add key="configPath" value="D:\\paramParse.json"/>
+  </appSettings>
 </configuration>
