--- a/VSWork/plxnhApi/testConsole/App.config
+++ b/VSWork/plxnhApi/testConsole/App.config
@@ -10,9 +10,14 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:38894/Data_Update_M.asmx"
+      <endpoint address="http://localhost:8044/Data_Update_M.asmx"
           binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap"
           contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />
     </client>
   </system.serviceModel>
+
+  <appSettings>
+    <add key="configPath" value="D:\\paramParse.json"/>
+  </appSettings>
+  
 </configuration>
