--- a/VSWork/plxnhApi/Service/Service.csproj
+++ b/VSWork/plxnhApi/Service/Service.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\thirdpart\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
