--- a/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
@@ -69,6 +69,7 @@
     <Content Include="pages\js\jquery.confirm.min.js" />
     <Content Include="pages\js\jquery.cookie.js" />
     <Content Include="pages\js\xnh.js" />
+    <Content Include="pages\menu.html" />
     <Content Include="pages\mzbc.html" />
     <Content Include="pages\czlp.html" />
     <Content Include="pages\fonts\glyphicons-halflings-regular.eot" />
