--- a/VSWork/plxnhApi/ApiMonitor/Web.config
+++ b/VSWork/plxnhApi/ApiMonitor/Web.config
@@ -29,6 +29,7 @@
   </system.serviceModel>
   <appSettings>
     <add key="configPath" value="D:\\GitHub\\CSharpHub\\VSWork\\plxnhApi\\ApiMonitor\\paramParse.json"/>
-    <add key="logPath" value="D:\\GitHub\\mylogs\\xnhlog.txt"/>
+    <add key="logPath" value="D:\\GitHub\\mylogs\\"/>
   </appSettings>
+
 </configuration>
