--- a/VSWork/plxnhApi/ApiMonitor/Web.config
+++ b/VSWork/plxnhApi/ApiMonitor/Web.config
@@ -30,6 +30,8 @@
   <appSettings>
     <add key="configPath" value="D:\\GitHub\\CSharpHub\\VSWork\\plxnhApi\\ApiMonitor\\paramParse.json"/>
     <add key="logPath" value="D:\\GitHub\\mylogs\\"/>
+
+    <add key ="oracleConnection" value="User ID=acs;Password=acs;Data Source=(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = SIT-Oracle-02.quark.com)(PORT = 1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = CORESIT.quark.com)))"/>
   </appSettings>
 
 </configuration>
