--- a/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
@@ -67,10 +67,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="pages\calendar\css\main.css" />
+    <Content Include="pages\calendar\datepicker.min.css" />
+    <Content Include="pages\calendar\datepicker.min.js" />
+    <Content Include="pages\calendar\datepicker.zh-CN.js" />
+    <Content Include="pages\calendar\js\main.js" />
+    <Content Include="pages\css\datepicker.css" />
     <Content Include="pages\css\maskStyle.css" />
+    <Content Include="pages\js\bootstrap-datepicker.js" />
     <Content Include="pages\js\jquery.confirm.min.js" />
     <Content Include="pages\js\jquery.cookie.js" />
-    <Content Include="pages\js\xnh.js" />
+    <Content Include="pages\js\xnh.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="pages\menu.html" />
     <Content Include="pages\mzbc.html" />
     <Content Include="pages\czlp.html" />
