DataTable to json array

--- a/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
@@ -74,6 +74,7 @@
     <Content Include="pages\calendar\js\main.js" />
     <Content Include="pages\css\datepicker.css" />
     <Content Include="pages\css\maskStyle.css" />
+    <Content Include="pages\images\welcomePic.jpg" />
     <Content Include="pages\js\bootstrap-datepicker.js" />
     <Content Include="pages\js\jquery.confirm.min.js" />
     <Content Include="pages\js\jquery.cookie.js" />
@@ -156,6 +157,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="log\XnhLogger.cs" />
+    <Compile Include="DataConvertUtil\DataConvert.cs" />
     <Compile Include="pages\xnhservice.asmx.cs">
       <DependentUpon>xnhservice.asmx</DependentUpon>
       <SubType>Component</SubType>
