--- a/VSWork/plxnhApi/ApiMonitor/Web.config
+++ b/VSWork/plxnhApi/ApiMonitor/Web.config
@@ -14,9 +14,11 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime/>
+    <httpRuntime />
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+  
+  <!--此节点为Service项目引用厂商接口的自动生产的配置，需要从Service项目的app.config拷贝过来-->
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -27,10 +29,13 @@
       <endpoint address="http://localhost:8044/Data_Update_M.asmx" binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap" contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap"/>
     </client>
   </system.serviceModel>
+  
   <appSettings>
+    <!--paramParse.json配置文件的绝对路径-->
     <add key="configPath" value="D:\\GitHub\\CSharpHub\\VSWork\\plxnhApi\\ApiMonitor\\paramParse.json"/>
+    <!--日志文件路径-->
     <add key="logPath" value="D:\\GitHub\\mylogs\\"/>
-
+    <!--Oracle连接字符串，请确保运行环境安装了OracleClient-->
     <add key ="oracleConnection" value="User ID=acs;Password=acs;Data Source=(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = SIT-Oracle-02.quark.com)(PORT = 1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = CORESIT.quark.com)))"/>
   </appSettings>
 
