--- a/VSWork/plxnhApi/Service/app.config
+++ b/VSWork/plxnhApi/Service/app.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <!--服务引用信息，由项目自动生成-->
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
@@ -14,6 +15,7 @@
     </system.serviceModel>
   
   <appSettings>
+    <!--配置文件路径-->
     <add key="configPath" value="D:\\paramParse.json"/>
   </appSettings>
 </configuration>
