--- a/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/plxnhApi/ApiMonitor/ApiMonitor.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="pages\autoComplete.html" />
     <Content Include="pages\calendar\css\main.css" />
     <Content Include="pages\calendar\datepicker.min.css" />
     <Content Include="pages\calendar\datepicker.min.js" />
