--- a/VSWork/xnh_new/testConsole/App.config
+++ b/VSWork/xnh_new/testConsole/App.config
@@ -18,6 +18,7 @@
 
   <appSettings>
     <add key="configPath" value="D:\\paramParse.json"/>
+    <add key="env" value="test"/>
   </appSettings>
   
 </configuration>
