--- a/VSWork/xnh_new/ApiMonitor/Web.config
+++ b/VSWork/xnh_new/ApiMonitor/Web.config
@@ -23,6 +23,7 @@
     <bindings>
       <basicHttpBinding>
         <binding name="Data_Update_MSoap" />
+        
         <binding name="Data_Update_IHttpBinding" />
       </basicHttpBinding>
     </bindings>
@@ -30,9 +31,11 @@
       <endpoint address="http://localhost/ApiMonitor/Data_Update_M.asmx"
         binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap"
         contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />
+
       <endpoint address="http://10.85.32.253:7001/sjpt_his_village/Data_Update_M.ws"
-        binding="basicHttpBinding" bindingConfiguration="Data_Update_IHttpBinding"
-        contract="ServiceReference1.Data_Update_IPortType" name="Data_Update_IHttpPort" />
+                binding="basicHttpBinding" bindingConfiguration="Data_Update_IHttpBinding"
+                contract="XHE.Data_Update_IPortType" name="Data_Update_IHttpPort" />
+      
     </client>
   </system.serviceModel>
   
@@ -41,6 +44,8 @@
     <add key="configPath" value="D:\\GitHub\\xnh\\bin\\paramParse.json"/>
     <!--日志文件路径-->
     <add key="logPath" value="D:\\GitHub\\"/>
+    <!--接口环境配置，值为prd表示生产环境接口，其他值为默认模拟接口-->
+    <add key="env" value="test"/>
     <!--Oracle连接字符串，请确保运行环境安装了OracleClient-->
     <!--<add key ="oracleConnection" value="User ID=lxhis;Password=lxhis12345;Data Source=(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 127.0.0.1)(PORT = 1521))(CONNECT_DATA =(SERVER = orcl)(SERVICE_NAME = orcl)))"/>-->
     <add key="oracleConnection" value="Data Source= (DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST =127.0.0.1)(PORT = 1521)))(CONNECT_DATA = (SERVICE_NAME=orcl))) ;User Id=lxhis;Password=lxhis12345"/>
