--- a/VSWork/xnh_new/Service/app.config
+++ b/VSWork/xnh_new/Service/app.config
@@ -23,5 +23,7 @@
   <appSettings>
     <!--配置文件路径-->
     <add key="configPath" value="D:\\paramParse.json"/>
+    <!--接口环境配置，值为prd表示生产环境接口，其他值为默认模拟接口-->
+    <add key="env" value="test"/>
   </appSettings>
 </configuration>
