update xnh project

--- a/VSWork/xnh_new/ApiMonitor/Web.config
+++ b/VSWork/xnh_new/ApiMonitor/Web.config
@@ -28,7 +28,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost/ApiMonitor/Data_Update_M.asmx"
+      <endpoint address="http://localhost:38894/Data_Update_M.asmx"
         binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap"
         contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />
 
