--- a/VSWork/xnh_new/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/xnh_new/ApiMonitor/ApiMonitor.csproj
@@ -79,6 +79,7 @@
     <Content Include="pages\calendar\js\main.js" />
     <Content Include="pages\css\datepicker.css" />
     <Content Include="pages\css\maskStyle.css" />
+    <Content Include="pages\iccard.ocx" />
     <Content Include="pages\images\welcomePic.jpg" />
     <Content Include="pages\js\bootstrap-datepicker.js" />
     <Content Include="pages\js\jquery.confirm.min.js" />
