--- a/VSWork/xnh_new/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/xnh_new/ApiMonitor/ApiMonitor.csproj
@@ -45,7 +45,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Service\bin\Debug\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\thirdpart\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Service">
       <HintPath>..\Service\bin\Debug\Service.dll</HintPath>
@@ -174,6 +174,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DB\DBUtil.cs" />
+    <Compile Include="DB\HIS.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
