--- a/VSWork/xnh_new_2/ApiMonitor/ApiMonitor.csproj
+++ b/VSWork/xnh_new_2/ApiMonitor/ApiMonitor.csproj
@@ -175,6 +175,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DB\DBUtil.cs" />
+    <Compile Include="DB\Dictionary.cs" />
     <Compile Include="DB\HIS.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
