--- a/VSWork/xnh_new_2/ApiMonitor/Web.config
+++ b/VSWork/xnh_new_2/ApiMonitor/Web.config
@@ -34,7 +34,8 @@
       <endpoint address="http://localhost/ApiMonitor/Data_Update_M.asmx" binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap" contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap"/>  
       <!--<endpoint address="http://192.168.200.2:80/ApiMonitor/Data_Update_M.asmx" binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap" contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap"/> -->
       <!--这里配农合的接口地址-->
-      <endpoint address="http://171.8.199.52:8771/sjpt_his_village/Data_Update_M.ws"
+      <!--<endpoint address="http://10.85.32.253:7001/sjpt_his_village/Data_Update_M.ws"-->
+      <endpoint address="http://10.85.32.253:7001/sjpt_his_village/Data_Update_M.ws "
                 binding="basicHttpBinding" bindingConfiguration="Data_Update_IHttpBinding"
                 contract="XHE.Data_Update_IPortType" name="Data_Update_IHttpPort" />
       
