--- a/VSWork/xnh_new_2/ApiMonitor/Web.config
+++ b/VSWork/xnh_new_2/ApiMonitor/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -13,9 +13,9 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation targetFramework="4.5" />
     <httpRuntime />
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
   
   <!--此节点为Service项目引用厂商接口的自动生产的配置，需要从Service项目的app.config拷贝过来-->
@@ -31,27 +31,28 @@
      <!-- <endpoint address="http://localhost:38894/Data_Update_M.asmx"
         binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap"
         contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />-->
-      <endpoint address="http://localhost/ApiMonitor/Data_Update_M.asmx" binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap" contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap"/>  
+      <endpoint address="http://localhost/ApiMonitor/Data_Update_M.asmx" binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap" contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap" />  
       <!--<endpoint address="http://192.168.200.2:80/ApiMonitor/Data_Update_M.asmx" binding="basicHttpBinding" bindingConfiguration="Data_Update_MSoap" contract="ServiceReference1.Data_Update_MSoap" name="Data_Update_MSoap"/> -->
       <!--这里配农合的接口地址-->
       <!--<endpoint address="http://10.85.32.253:7001/sjpt_his_village/Data_Update_M.ws"-->
-      <endpoint address="http://10.85.32.253:7001/sjpt_his_village/Data_Update_M.ws "
-                binding="basicHttpBinding" bindingConfiguration="Data_Update_IHttpBinding"
-                contract="XHE.Data_Update_IPortType" name="Data_Update_IHttpPort" />
+      <endpoint address="http://10.85.32.253:7001/sjpt_his_village/Data_Update_M.ws " binding="basicHttpBinding" bindingConfiguration="Data_Update_IHttpBinding" contract="XHE.Data_Update_IPortType" name="Data_Update_IHttpPort" />
       
     </client>
   </system.serviceModel>
   
   <appSettings>
     <!--paramParse.json配置文件的绝对路径-->
-    <add key="configPath" value="D:\\xnh\\bin\\paramParse.json"/>
+    <add key="configPath" value="D:\\xnh\\bin\\paramParse.json" />
     <!--日志文件路径-->
-    <add key="logPath" value="D:\\log\\"/>
+    <add key="logPath" value="D:\\log\\" />
     <!--接口环境配置，值为prd表示生产环境接口，其他值为默认模拟接口，这里改为prd就可以连配置农合的接口-->
-    <add key="env" value="prd"/>
+    <add key="env" value="prd" />
     <!--Oracle连接字符串，请确保运行环境安装了OracleClient-->
     <!--<add key ="oracleConnection" value="User ID=lxhis;Password=lxhis12345;Data Source=(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 127.0.0.1)(PORT = 1521))(CONNECT_DATA =(SERVER = orcl)(SERVICE_NAME = orcl)))"/>-->
-    <add key="oracleConnection" value="Data Source= (DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST =192.168.200.2)(PORT = 1521)))(CONNECT_DATA = (SERVICE_NAME=orcl))) ;User Id=lxhis;Password=lxhis12345"/>
+    <add key="oracleConnection" value="Data Source= (DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST =192.168.200.2)(PORT = 1521)))(CONNECT_DATA = (SERVICE_NAME=orcl))) ;User Id=lxhis;Password=lxhis12345" />
   </appSettings>
+    <system.webServer>
+        <directoryBrowse enabled="false" />
+    </system.webServer>
 
 </configuration>
